# tintin

./: .gitignore  README.md  docker-compose.yml  start.sh
backend/: .env.example  .gitignore  init_db.py  pyproject.toml  start.sh
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/auth/: router.py  service.py
backend/app/chats/: router.py  service.py  websocket.py
backend/app/friends/: router.py  service.py
backend/app/tests/: test_auth.py
docs/: PROJECT.md
docs/superpowers/plans/: 2026-05-22-chat-app.md  2026-05-31-people-tab-and-unified-chat.md
docs/superpowers/specs/: 2026-05-22-chat-app-design.md  2026-05-31-people-tab-and-unified-chat-design.md  2026-06-05-people-tab-and-unified-chat-implementation.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  ws.ts
frontend/src/components/: Auth.tsx  ChatView.tsx  DateSeparator.tsx  Home.tsx  Login.tsx  MessageBubble.tsx  NewChatModal.tsx  NotFound.tsx  Register.tsx  Sidebar.tsx  UserAutocomplete.tsx
frontend/src/hooks/: useAuth.ts  useChat.ts
frontend/src/hooks/__tests__/: useAuth.test.tsx
frontend/src/middleware/: MiddlewareProvider.tsx  auth.ts  index.ts
frontend/src/types/: index.ts
frontend/src/utils/: jwt.ts  toLocalTimeZone.ts
